# checkmail

./: .gitignore  README.md  pyproject.toml
src/: index.py
src/checkmail/: data.py  server.py
